force-app/main/default/objects/Log_Erro__c/Log_Erro__c.object-meta.xml
<CustomObject>
    <description>Log de erros da aplicação — alvo de investigação do AgentTrace (capacidade log_erro).</description>
    <label>Log de Erro</label>
    <pluralLabel>Logs de Erro</pluralLabel>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Nº do Log</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>