force-app/main/default/objects/Log_Erro__c/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <label>Mensagem</label>
    <description>Texto do erro registrado.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>