force-app/main/default/objects/Log_Erro__c/fields/Nivel__c.field-meta.xml
<CustomField>
    <fullName>Nivel__c</fullName>
    <label>Nível</label>
    <description>Severidade do log: ERROR, WARN, INFO.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>