force-app/main/default/objects/Log_Erro__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Origem</label>
    <description>De onde veio o erro (classe, integração ou processo).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>